# scrutable

./: .gitignore  CLAUDE.md  TODO.md  flake.nix  pyproject.toml  pyrightconfig.json
examples/: basic_simulation.py  slo_performance_demo.py  slo_spectrum_demo.py
scrutable-talk/: Makefile  abstract.md  canary_long_tail.py  canary_results.md  dev-plan.md  noise_vs_window.py  noise_vs_window_parallel.out  noise_vs_window_parallel.py  noise_vs_window_results.md  outline.md  run_150_sc.py  sc_slo_cache.json  section3_demo.py  slides.md  slo-snr.md  speaker-notes.md  todo.md  window-size-sweep.md
scrutable-talk/output/: noise_vs_window_parallel.csv
src/scrutable/: __init__.py  actuator.py  buffer.py  detector.py  disturbance.py  engine.py  event_loop.py  histogram_buffer.py  infrastructure.py  models.py  observations.py  operations.py  pathology.py  pipeline.py  plant.py  profiles.py  rollout.py  sensor.py  simulator.py  (+4 more)
tests/: conftest.py  test_alarm_log.py  test_buffer.py  test_detector.py  test_disturbance.py  test_engine_mix.py  test_engine_pipeline_wiring.py  test_engine_rollout_wiring.py  test_event_loop.py  test_histogram_buffer.py  test_infrastructure.py  test_models.py  test_observations.py  test_operations.py  test_pathology.py  test_pipeline.py  test_plant.py  test_profiles.py  test_progressive_rollout_engine.py  test_release_model.py  test_rollout.py  test_rollout_actuator.py  test_scenario.py  test_simulator.py  test_slo_detector.py  test_slo_performance.py  test_slo_scenario.py  test_synthesizer.py  test_traffic.py  test_window_result.py  test_workload.py
(+16 files in other folders)
